# smartincludes

./: .travis.yml  Main.hs  Readme.org  default.nix  production.nix  shell.nix  smartincludes.cabal
