cabal-version:       >=1.10
name:                smartincludes
version:             1.0
synopsis:            Reorder C++ include directives, smart
-- description:
-- bug-reports:
-- license:
license-file:        LICENSE
author:              Philipp Middendorf <pmidden@mailbox.org>
maintainer:          Philipp Middendorf <pmidden@mailbox.org>
copyright:           2020 Philipp Middendorf
-- category:
build-type:          Simple

executable smartincludes
  main-is:             Main.hs
  -- other-modules:
  -- other-extensions:
  build-depends:       base >=4.12 && <4.13
                     , text
                     , bifunctors
                     , attoparsec
                     , vector
                     , optparse-applicative
  -- hs-source-dirs:
  default-language:    Haskell2010
  ghc-options: -Wall
  build-tools:         hlint
                     , hindent
                     , cabal-install
