cabal-version:       >=1.10
name:                smartincludes
version:             1.0
synopsis:            Reorder C++ include directives, smart
license-file:        LICENSE
author:              Philipp Middendorf <pmidden@mailbox.org>
maintainer:          Philipp Middendorf <pmidden@mailbox.org>
copyright:           2020 Philipp Middendorf
build-type:          Simple

executable smartincludes
  main-is:             Main.hs
  build-depends:       base >=4.12 && <4.13
                     , text
                     , bifunctors
                     , attoparsec
                     , vector
                     , optparse-applicative
  default-language:    Haskell2010
  ghc-options: -Wall
  build-tools:         hlint
                     , hindent
                     , cabal-install
