cabal-version:       >=1.10
name:                smartincludes
version:             1.0
synopsis:            Reorder C++ include directives, smart
license-file:        LICENSE
author:              Philipp Middendorf <pmidden@mailbox.org>
maintainer:          Philipp Middendorf <pmidden@mailbox.org>
copyright:           2020 Philipp Middendorf
build-type:          Simple

executable smartincludes
  main-is:             Main.hs
  build-depends:       base
                     , text
                     , bifunctors
                     , attoparsec
                     , vector
                     , optparse-applicative
                     , filepath
  default-language:    Haskell2010
  ghc-options: -Wall
  build-tools:         hlint
                     , cabal-install
